r2e-compile-tests/cases/decorators/fail/guard_bean_missing.stderr
error[E0277]: type `QuotaRegistry` was not provided to the AppBuilder
  --> cases/decorators/fail/guard_bean_missing.rs:68:36
   |
68 |             .register_controller::<QuotaController>()
   |                                    ^^^^^^^^^^^^^^^ missing `.provide::<QuotaRegistry>()` or `.register::<QuotaRegistry>()`
   |
   = help: the trait `Contains<QuotaRegistry, _>` is not implemented for `HNil`
   = note: every dependency must be provided or registered as a bean before calling `build_state()`
help: the following other types implement trait `Contains<H, Idx>`
  --> $WORKSPACE/r2e-core/src/type_list.rs
   |
   | impl<H, T> Contains<H, Here> for TCons<H, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<H, T>` implements `Contains<H, Here>`
...
   | impl<H, X, T, I> Contains<H, There<I>> for TCons<X, T> where T: Contains<H, I> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<X, T>` implements `Contains<H, There<I>>`
...
   | impl<H, T> Contains<H, Here> for HCons<H, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<H, T>` implements `Contains<H, Here>`
   | impl<H, X, T, I> Contains<H, There<I>> for HCons<X, T> where T: Contains<H, I> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<X, T>` implements `Contains<H, There<I>>`
   = note: required for `TCons<QuotaRegistry, TNil>` to implement `AllSatisfied<HNil, (_, ())>`
note: required by a bound in `register_controller`
  --> $WORKSPACE/r2e-core/src/builder/registration.rs
   |
   |     fn register_controller<C>(self) -> Self
   |        ------------------- required by a bound in this associated function
...
   |         C::Deps: AllSatisfied<T, DepIdx>;
   |                  ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RegisterController::register_controller`
